--- a/html/home.html
+++ b/html/home.html
@@ -60,13 +60,13 @@
 							class="country__option"
 							data-content='<span class="flag-icon flag-icon-us"></span> USA'
 						>
-							English
+							<a> English </a>
 						</option>
 						<option
 							class="country__option"
 							data-content='<span class="flag-icon flag-icon-eg"></span> Egypt'
 						>
-							Arabic
+							<a> Arabic </a>
 						</option>
 					</select>
 					<p class="language">English</p>
@@ -1266,284 +1266,6 @@
 			</div>
 		</div>
 
-		<!-- Slider main container -->
-		<div class="swiper__ad__modal">
-			<!-- Additional required wrapper -->
-			<div class="swiper-wrapper">
-				<!-- Slides -->
-				<div class="swiper-slide">
-					<div class="ad__modal__container">
-						<img
-							class="close__modal__btn"
-							src="../assets/images/Group 72768.svg"
-							alt=""
-						/>
-						<div class="modal__img">
-							<img
-								alt=""
-								src="../assets/images/91f015ade2f92e41a87d40faf552bced.png"
-								class=""
-							/>
-						</div>
-						<div class="modal__content">
-							<h2 class="modal__title">Absolute real state</h2>
-							<p class="modal__details">
-								<img
-									alt=""
-									src="../assets/images/Mask Group 29512.png"
-									class="view__icon"
-								/>
-								<span class="view__number">20</span>
-								<img
-									class="like__icon"
-									src="../assets/images/like.png"
-									alt=""
-								/>
-								<span class="like__number">07</span>
-							</p>
-							<div class="modal__footer">
-								<p class="contact__number">
-									<img
-										alt=""
-										src="../assets/images/Group 73001.png"
-										class="contact__number__icon"
-									/>
-									+966 344 234 23
-								</p>
-								<p class="whatsapp__number">
-									<img
-										alt=""
-										src="../assets/images/Group 73002.png"
-										class="whatsapp__number__icon"
-									/>
-									+966 344 234 23
-								</p>
-								<p class="website__link">
-									<img
-										alt=""
-										src="../assets/images/Group 73107.png"
-										class="website__link__icon"
-									/>
-									<a>www.taswiq4u.com</a>
-								</p>
-								<p class="instagram__link">
-									<img
-										alt=""
-										src="../assets/images/Group 73108.png"
-										class="instagram__link__icon"
-									/>
-									<a>www.taswiq4u.com</a>
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="swiper-slide">
-					<div class="ad__modal__container">
-						<img
-							class="close__modal__btn"
-							src="../assets/images/Group 72768.svg"
-							alt=""
-						/>
-						<div class="modal__img">
-							<img
-								alt=""
-								src="../assets/images/91f015ade2f92e41a87d40faf552bced.png"
-								class=""
-							/>
-						</div>
-						<div class="modal__content">
-							<h2 class="modal__title">Absolute real state</h2>
-							<p class="modal__details">
-								<img
-									alt=""
-									src="../assets/images/Mask Group 29512.png"
-									class="view__icon"
-								/>
-								<span class="view__number">20</span>
-								<img
-									class="like__icon"
-									src="../assets/images/like.png"
-									alt=""
-								/>
-								<span class="like__number">07</span>
-							</p>
-							<div class="modal__footer">
-								<p class="contact__number">
-									<img
-										alt=""
-										src="../assets/images/Group 73001.png"
-										class="contact__number__icon"
-									/>
-									+966 344 234 23
-								</p>
-								<p class="whatsapp__number">
-									<img
-										alt=""
-										src="../assets/images/Group 73002.png"
-										class="whatsapp__number__icon"
-									/>
-									+966 344 234 23
-								</p>
-								<p class="website__link">
-									<img
-										alt=""
-										src="../assets/images/Group 73107.png"
-										class="website__link__icon"
-									/>
-									<a>www.taswiq4u.com</a>
-								</p>
-								<p class="instagram__link">
-									<img
-										alt=""
-										src="../assets/images/Group 73108.png"
-										class="instagram__link__icon"
-									/>
-									<a>www.taswiq4u.com</a>
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="swiper-slide">
-					<div class="ad__modal__container">
-						<img
-							class="close__modal__btn"
-							src="../assets/images/Group 72768.svg"
-							alt=""
-						/>
-						<div class="modal__img">
-							<img
-								alt=""
-								src="../assets/images/91f015ade2f92e41a87d40faf552bced.png"
-								class=""
-							/>
-						</div>
-						<div class="modal__content">
-							<h2 class="modal__title">Absolute real state</h2>
-							<p class="modal__details">
-								<img
-									alt=""
-									src="../assets/images/Mask Group 29512.png"
-									class="view__icon"
-								/>
-								<span class="view__number">20</span>
-								<img
-									class="like__icon"
-									src="../assets/images/like.png"
-									alt=""
-								/>
-								<span class="like__number">07</span>
-							</p>
-							<div class="modal__footer">
-								<p class="contact__number">
-									<img
-										alt=""
-										src="../assets/images/Group 73001.png"
-										class="contact__number__icon"
-									/>
-									+966 344 234 23
-								</p>
-								<p class="whatsapp__number">
-									<img
-										alt=""
-										src="../assets/images/Group 73002.png"
-										class="whatsapp__number__icon"
-									/>
-									+966 344 234 23
-								</p>
-								<p class="website__link">
-									<img
-										alt=""
-										src="../assets/images/Group 73107.png"
-										class="website__link__icon"
-									/>
-									<a>www.taswiq4u.com</a>
-								</p>
-								<p class="instagram__link">
-									<img
-										alt=""
-										src="../assets/images/Group 73108.png"
-										class="instagram__link__icon"
-									/>
-									<a>www.taswiq4u.com</a>
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- If we need navigation buttons -->
-			<div class="swiper-button-prev"></div>
-			<div class="swiper-button-next"></div>
-		</div>
-
-		<!-- swiper ad
-		<div class="swiper__ad__modal">
-			<div class="ad__modal__container">
-				<img
-					class="close__modal__btn"
-					src="../assets/images/Group 72768.svg"
-					alt=""
-				/>
-				<div class="modal__img">
-					<img
-						alt=""
-						src="../assets/images/91f015ade2f92e41a87d40faf552bced.png"
-						class=""
-					/>
-				</div>
-				<div class="modal__content">
-					<h2 class="modal__title">Absolute real state</h2>
-					<p class="modal__details">
-						<img
-							alt=""
-							src="../assets/images/Mask Group 29512.png"
-							class="view__icon"
-						/>
-						<span class="view__number">20</span>
-						<img class="like__icon" src="../assets/images/like.png" alt="" />
-						<span class="like__number">07</span>
-					</p>
-					<div class="modal__footer">
-						<p class="contact__number">
-							<img
-								alt=""
-								src="../assets/images/Group 73001.png"
-								class="contact__number__icon"
-							/>
-							+966 344 234 23
-						</p>
-						<p class="whatsapp__number">
-							<img
-								alt=""
-								src="../assets/images/Group 73002.png"
-								class="whatsapp__number__icon"
-							/>
-							+966 344 234 23
-						</p>
-						<p class="website__link">
-							<img
-								alt=""
-								src="../assets/images/Group 73107.png"
-								class="website__link__icon"
-							/>
-							<a>www.taswiq4u.com</a>
-						</p>
-						<p class="instagram__link">
-							<img
-								alt=""
-								src="../assets/images/Group 73108.png"
-								class="instagram__link__icon"
-							/>
-							<a>www.taswiq4u.com</a>
-						</p>
-					</div>
-				</div>
-			</div>
-		</div> -->
-
 		<!-- select-category-modal -->
 		<div class="all-category__modal">
 			<div class="modal__container">
@@ -2231,14 +1953,18 @@
 		<script>
 			const adModal = document.querySelector('.ad__modal');
 			const adCards = document.querySelectorAll('.ad__card');
+			const swiperSlide = document.querySelectorAll('.swiper-slide');
+			swiperSlide.forEach((slide) => {
+				slide.addEventListener('click', () => {
+					adModal.style.display = 'flex';
+				});
+			});
 			adCards.forEach((card) =>
 				card.addEventListener('click', () => {
 					adModal.style.display = 'flex';
 					document.body.style.overflow = 'hidden';
 				})
 			);
-		</script>
-		<script>
 			const likeIcons = document.querySelectorAll('.like__icon');
 			likeIcons.forEach((likeIcon) =>
 				likeIcon.addEventListener('click', (e) => {
