--- a/html/signup.html
+++ b/html/signup.html
@@ -40,7 +40,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="../css/intlInputPhone.min.css" />
-		<link rel="stylesheet" href="../css/signup-ar.css" />
+		<link rel="stylesheet" href="../css/signup-en.css" />
 		<link rel="stylesheet" href="../css/select-category-modal-en.css" />
 		<link rel="stylesheet" href="../css/all-category-modal-en.css" />
 		<title>Sign up</title>
