--- a/html/edit-ad.html
+++ b/html/edit-ad.html
@@ -106,7 +106,7 @@
 					<img alt="" src="../assets/images/logo.png" class="logo" />
 				</div>
 				<!-- tabs -->
-				<ul class="navbar__list">
+				<!-- <ul class="navbar__list">
 					<li class="navbar__tab">
 						<a class="navbar__link">Home</a>
 					</li>
@@ -125,7 +125,7 @@
 					<li class="navbar__tab">
 						<a class="navbar__link">Contact us</a>
 					</li>
-				</ul>
+				</ul> -->
 				<!-- account -->
 				<div class="account">
 					<img class="chat__icon" src="../assets/images/chat.svg" alt="" />
