--- a/html/verify-code.html
+++ b/html/verify-code.html
@@ -222,7 +222,7 @@
 			      			maxlength="1"
 			      		/>
 			      	</div>
-			      	<p class="time">01:59</p>
+			      	<p class="time">02:00</p>
 			      	<a class="resend__link">
 			      		Resend code ?
 			      	</a>
@@ -742,7 +742,8 @@
 			const numberSix = document.getElementById("number-six")
 			const verifyBtn = document.querySelector(".verify__btn");
 			const time = document.querySelector(".time");
-
+			const resendBtn = document.querySelector(".resend__link")
+			
 			numberOne.addEventListener("input",(e) => {
 				e.target.value = e.target.value.replace(/[^0-9]/g,'');
 				if(e.target.value !== "") {
@@ -794,6 +795,7 @@
 				let resetTimer = setTimeout(()=>{
 					clearInterval(timer)
 					verifyBtn.disabled = true
+					resendBtn.style.cursor = "pointer"
 				},120000)
 			})
 
